@@ -10,7 +10,7 @@ url="http://root.cern.ch/drupal/content/cling"
 #license=('custom:University of Illinois/NCSA Open Source License')
 license=(custom)
 depends=('gcc-libs' 'libffi' 'python2' "gcc")
-makedepends=('git' 'svn')
+makedepends=('git' 'svn' 'curl')
 conflicts=('clang>=3.3')
 options=(!buildflags)
 
@@ -18,16 +18,8 @@ _clingrepo=http://root.cern.ch/git/cling.git
 _llvmrepo=http://llvm.org/svn/llvm-project
 
 msg 'Determining with which LLVM SVN revision to build cling'
-# Checkout only the LastKnownGoodLLVMSVNRevision.txt file from cling repo
-mkdir -p cling-llvm-revision
-cd cling-llvm-revision
-git init
-git remote add -f origin $_clingrepo
-git config core.sparsecheckout true
-_llvmrevisionfile=LastKnownGoodLLVMSVNRevision.txt
-echo $_llvmrevisionfile > .git/info/sparse-checkout
-git pull origin master
-_llvmrevision=$(cat "$_llvmrevisionfile")
+_llvmrevision=$(curl 'http://root.cern.ch/gitweb?p=cling.git;a=blob_plain;f=LastKnownGoodLLVMSVNRevision.txt')
+msg2 "LLVM revision: $_llvmrevision"
 
 source=(cling::"git+$_clingrepo"
 llvm::"svn+$_llvmrepo/llvm/trunk#revision=$_llvmrevision"
