@@ -1,6 +1,6 @@
 pkgname=ketpegs-git
 _gitname=ketpegs
-pkgver=0.8.23.g277702f
+pkgver=0.8.24.g5e3ed69
 pkgrel=1
 pkgdesc="A pegs game using the curses library"
 arch=('any')
