@@ -13,8 +13,7 @@ replaces=("kernel26${_kernelname}")
 backup=("etc/mkinitcpio.d/${pkgbase}.preset")
 install=llvmlinux.install
 
-pkgver=5dd1ca1
-#todo: get a human-readable version number
+pkgver=3.10.rc7
 
 pkgrel=1
 url="http://llvm.linuxfoundation.org/index.php/Main_Page"
@@ -41,6 +40,11 @@ if [ ${CARCH} == i686 ]; then
 else
 	_lll_target=x86_64
 fi
+
+pkgver() {
+	cd "${srcdir}/kernel"
+	git describe | sed 's/^v//;s/-/./g'
+}
 
 prepare() {
 	#ok some hacking needed to get this working...
@@ -69,18 +73,13 @@ build() {
 	make kernel-build
 }
 
-pkgver() {
+package() {
 	cd ${srcdir}/llvmlinux/targets/${_lll_target}/src/linux
-	#we use kernel release tag as version number
+
 	# get kernel version
 	_kernver="$(make LOCALVERSION= kernelrelease)"
 	_basekernel=${_kernver%%-*}
 	_basekernel=${_basekernel%.*}
-	echo $(${_basekernel} | sed 's|-|.|g')
-}
-
-package() {
-	cd ${srcdir}/llvmlinux/targets/${_lll_target}/src/linux
 
 	mkdir -p "${pkgdir}"/{lib/modules,lib/firmware,boot}
 	make LOCALVERSION= INSTALL_MOD_PATH="$pkgdir" modules_install
