@@ -2,14 +2,22 @@
 
 _pkgname=lxpanel-qt
 pkgname=$_pkgname-git
-pkgver=ebce000_40
+pkgver=1a31434_42
 pkgrel=1
 pkgdesc="The Qt porting of lxpanel"
 arch=('i686' 'x86_64')
 url="http://www.lxde.org"
 license=('GPL3')
 
-depends=('qt4' 'libfm-qt' 'libfm-git')
+depends=('qt4' 
+         'pcmanfm-qt-git' 
+         'libfm-git' 
+         'libgtop' 
+         'menu-cache' 
+         'glib' 
+         'libxdamage' 
+         'libxcomposite' 
+         'libxrender')
 makedepends=('git')
 source=(git+git://lxde.git.sourceforge.net/gitroot/lxde/lxpanel-qt)
 md5sums=('SKIP')
@@ -27,6 +35,6 @@ build() {
 }
 
 package() {
-  cd "${srcdir}/${_gitname}"
+  cd "${srcdir}/${_pkgname}"
   make DESTDIR="${pkgdir}" install
 }
