@@ -1,7 +1,7 @@
 # Maintainer: Wang Jiajun <amesists AT gmail DOT com>
 pkgname=python-you-get
 _pkgname=you-get
-pkgver=0.3.16
+pkgver=0.3.17
 pkgrel=1
 pkgdesc="A YouTube/Youku/Niconico video downloader written in Python 3."
 url="http://www.soimort.org/you-get/"
@@ -10,7 +10,7 @@ license=('MIT')
 depends=('python' 'python-distribute')
 makedepends=('python')
 source=("https://pypi.python.org/packages/source/y/${_pkgname}/${_pkgname}-${pkgver}.tar.gz")
-md5sums=('3e69b51470d835a17bb4c55f3bfabd5c')
+md5sums=('944923ed2cbf3de44870331ace6073d2')
 
 build() {
   cd "${srcdir}"/${_pkgname}-${pkgver}
