@@ -2,7 +2,7 @@
 
 pkgname=smartladder
 pkgver=3.0.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A gae proxy forked from goagent"
 arch=("any")
 url="https://github.com/kawaiiushio/smartladder"
