@@ -9,7 +9,7 @@ _category='games'
 
 pkgname=spring-ba
 pkgver=7.78
-pkgrel=1
+pkgrel=2
 pkgdesc="A popular, highly balanced mod based on the late, immensely popular mod Absolute Annihilation. Balanced Annihilation is designed for competitive 1v1 gameplay but is also perfectly suited for larger team games."
 arch=(any)
 url="http://balancedannihilation.org/"
@@ -26,7 +26,7 @@ package() {
 
 	mkdir -p $pkgdir/usr/share/spring/mods || return 1
 
-	install -TDm 644 $srcdir/ba-v7.78.sdz pkgdir/usr/share/spring/mod/ba-v7.78.sdz || return 1
+	install -TDm 644 $srcdir/ba-v7.78.sdz $pkgdir/usr/share/spring/mods/ba-v7.78.sdz || return 1
 	install -Dm 644 $srcdir/license-non-free ${pkgdir}/usr/share/licenses/${pkgname}/non-free || return 1
 }
 
