@@ -213,3 +213,8 @@
         * spring-ba-7.78
         Routine package update.
 
+2013-07-13 NiteHogg <keith.b.elliott [at] gmail [dot] com>
+
+        * spring-ba-7.78
+        Routine package update.
+
